test/types/type_variables/deitz/part7/test_error1.good
test_error1.chpl:14: error: unresolved call 'foo(C(int))'
test_error1.chpl:10: note: candidates are: foo(i: int)
